docs/k8s/deploy-dev.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: g2-reverse-proxy
  labels:
    app: g2-reverse-proxy
spec:
  replicas: 3
  selector:
    matchLabels:
      app: g2-reverse-proxy
  template:
    metadata:
      labels:
        app: g2-reverse-proxy
    spec:
      containers:
        - name: g2-reverse-proxy
          image: registry.au-syd.bluemix.net/zmondev/g2-reverse-proxy:1.1.0
          ports:
            - containerPort: 80
          imagePullPolicy: Always
      restartPolicy: Always
      imagePullSecrets:
        - name: IMAGE_PULL_SECRET
