docs/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: g2-reverse-proxy
spec:
  ports:
    - name: "g2-reverse-proxy-port"
      port: 80
      targetPort: 8080
  selector:
    app: g2-reverse-proxy
  type: ClusterIP
